# machine_learn

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  roc.py  数据分析.ipynb
20250815/: functions.py  test.py
gradient_descent/: exe1.py  exe2.py  g.py  gradient_descent_diabetes copy.ipynb  gradient_descent_diabetes.ipynb  gradient_descent_fixed.py  gradient_descent_x^2.ipynb
knn/: exe_1.py  knn.ipynb  数字识别Knn.ipynb  示例代码.ipynb
决策树/: IrisDT.py  id3.ipynb  wine.ipynb
